// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get-webhook-item should get multiple webhooks by ID 1`] = `
[
  {
    "enabled": true,
    "events": "content.published",
    "id": "00000000-0000-0000-0000-000000000000",
    "name": "_Test Item Webhook",
    "types": "",
    "url": "https://example.com/webhook1",
  },
  {
    "enabled": true,
    "events": "content.deleted",
    "id": "00000000-0000-0000-0000-000000000000",
    "name": "_Test Item Webhook2",
    "types": "",
    "url": "https://example.com/webhook2",
  },
]
`;

exports[`get-webhook-item should get no webhooks for empty request 1`] = `[]`;

exports[`get-webhook-item should get single webhook by ID 1`] = `
[
  {
    "enabled": true,
    "events": "content.published",
    "id": "00000000-0000-0000-0000-000000000000",
    "name": "_Test Item Webhook",
    "types": "",
    "url": "https://example.com/webhook",
  },
]
`;
